frontend/src/components/NavBar/styles/NavBar.scss
@use "./NavBar.variables.scss" as nav;
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');

/* Base NavMenu Children */
.nav-menu-root {
    display: flex;
    justify-content: right;
    width: 100%;
    min-height: 60px;
    overflow: visible;
    height: 8%;
    border-bottom: 2px solid nav.$border-color;
    background-color: nav.$base-color;
}

.nav-menu-root > div {
    overflow: visible;
}

.nav-menu-list {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    gap: 1.75rem;
    list-style: none;
    padding: 0.75rem 1.75rem;
}

.list-item {
    transform: translate(0pt);
    display: flex;
    align-items: center;
    justify-content: center;
    height: auto;
    border-radius: 4px;
    color: nav.$text-color;
    transition-duration: nav.$transition-speed;
}

.list-item:hover {
    background-color: nav.$highlight-color;
}

.nav-menu-trigger {
    display: flex;
    align-items: center;
    text-decoration: none;
    font-family: "Noto Sans";
    font-weight: 700;
    border-radius: 4px;
    font-size: 1.25rem;
    padding: 0.25rem 0.5rem;
    gap: 0.3125rem;
    border: none;
    background-color: transparent;
    color: inherit;
    cursor: pointer;
}
.nav-menu-trigger[data-state="open"] {
    background-color: nav.$highlight-color;
}

.link {
    text-decoration: none;
    font-family: "Noto Sans";
    font-weight: 700;
    border-radius: 4px;
    font-size: 1.25rem;
    padding: 0.25rem 0.5rem;
    color: inherit;
    width: fit-content;
}

.forge-logo {
    height: 100%;
}

.logo-link {
    display: flex;
    justify-content: left;
    align-items: left;
    gap: .75rem;
    text-decoration: none;
    background-color: transparent;
    padding: 0.75rem 1rem;
    position: absolute;
    left: 0;
    min-width: 18rem;
    width: fit-content;
    z-index: 1;
}

.logo-text {
    transition-duration: nav.$transition-speed;
    color: nav.$text-color;
    font-family: "Montserrat";
    font-size: 1.875rem;
    font-weight: 700;
    text-transform: uppercase;
    overflow: visible;
    white-space: nowrap;
}

.nav-menu-content {
    position: absolute;
    top: 100%;
    z-index: 1000;
    display: flex;
    flex-direction: column;
    padding: 0.25rem;
    width: max-content;
    gap: 0.5rem;
    border-radius: 4px;
    background-color: nav.$popup-color;
    color: nav.$popup-text;
    box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
    transition: width, height, 250ms ease;
}
.nav-menu-content[data-state="open"] {
    animation: scale-in 200ms ease;
}

.nav-menu-content .link:hover {
    background-color: nav.$popup-highlight;
}


.indicator {
    display: flex;
    align-items: flex-end;
    justify-content: center;
    height: 10px;
    overflow: hidden;
    top: 100%;
    margin-top: -10px;
    z-index: 1;
    transition: width, transform 250ms ease;

    
}
.indicator[data-state="visible"] {
    animation: fade-in 200ms ease;
}
.indicator[data-state="hidden"] {
    animation: fade-out 200ms ease;
}
/* Sign In Button/Dropdown */
.sign-in-button {
    display: flex;
    align-items: center;
    justify-content: center;
    height: auto;
    border-radius: 4px;
    color: nav.$text-color;
    background-color: transparent;
    cursor: pointer;
    overflow: visible;
    white-space: nowrap;

}
.sign-in-button:hover {
    background-color: nav.$highlight-color;
}

/* Other Components */
.caret-down, .hamburger-icon {
    color: nav.$text-color;
    transition: nav.$transition-speed ease;
}

.user-trigger:has(.hamburger-icon) {
    width: 0;
    height: 0;
    scale: -20%;
    transform: translate(100pt);
    opacity: 0;
    transition-duration: nav.$transition-speed;
    position: absolute;
    z-index: -3;
}

.hamburger-icon {
    position: absolute;
    width: 15pt;
    height: 20pt;
}

.user-trigger[data-state="open"] .dropdown-spinner{
    transform: rotate(-180deg);
}

.caret-right {
    color: nav.$text-color;
    transform: rotate(-90deg);
    scale: 1.5;
    animation: rotate-out 250ms ease;
}
.caret-right[data-state="true"] {
    transform: rotate(-180deg);
}
.caret-right[data-state="false"] {
    transform: rotate(-90deg);
}

.separator {
    background-color: nav.$border-color;
    transition: nav.$transition-speed;
    border-radius: 1px;
    height: 2px;
    width: 100%;
    margin-left: -1.5rem;
}
.separator.horizontal {
    height: 100%;
    width: 2px;
}

.text {
    display: flex;
    align-items: center;
    color: nav.$text-color;
    font-size: 1.25rem;
    font-weight: 500;
    width: 100%;
    cursor: pointer;
    padding: 0.375rem 0.75rem;
    margin: 0.5rem 0;
    justify-content: space-between;
    border-radius: 4px;
}
.text:hover {
    background-color: nav.$highlight-color;
}

.tag-group {
    display: flex;
    flex-direction: column;
    gap: 0.25rem;
}

.tag {
    color: nav.$text-color;
    font-size: 1rem;
    font-weight: 400;
    margin-left: 0.75rem;
    padding: 0.25rem 0.5rem;
    cursor: pointer;
}
.tag:hover {
    background-color: nav.$highlight-color;
}

.arrow {
    position: relative;
    top: 50%;
    background-color: nav.$popup-color;
    width: 10px;
    height: 10px;
    transform: rotate(45deg);
}

.indicator {
    display: flex;
    align-items: flex-end;
    justify-content: center;
    height: 10px;
    overflow: hidden;
    top: 100%;
    margin-top: -10px;
    z-index: 1;
    transition: width, transform 250ms ease;

    &[data-state=visible] {
        animation: fade-in 200ms ease;
    }
    &[data-state=hidden] {
        animation: fade-out 200ms ease;
    }
}

.nav-avatar-root {
    @extend .avatar-root !optional;
    height: 32px;
    width: 32px;
    border-radius: 100%;
    text-align: center;
    background-color: nav.$highlight-color;
    color: nav.$text-color;
}

.nav-avatar-fallback {
    @extend .avatar-fallback !optional;
    font-size: 10pt;
}

.nav-avatar-image {
    @extend .avatar-image !optional;
    height: 100%;
    width: 100%;
}

@media screen and (width < nav.$mobile-breakpoint) {
    .logo-text, .list-item {
        transform: translate(0, -200pt);
        opacity: 0;
        scale: 0%;
    }
    .hamburger-icon {
        size: 100%;
        transform: translate(0);
        margin-right: .2rem;
        opacity: 1;
    }
    .user-trigger:has(.hamburger-icon) {
        transform: translate(0pt, 0pt);
        position: relative;
        width: 15pt;
        height: 20pt;
        scale: 100%;
        opacity: 1;
        z-index: 0;
    }
    .separator {
        margin-left: 0;
    }
}

